Added the first handler and the mainmenu

--- a/XPShop/plugin.yml
+++ b/XPShop/plugin.yml
@@ -2,3 +2,7 @@ main: me.trusthage.other.Main
 version: 1.0
 name: XPShop
 author: TrustHage
+
+commands:
+  xpshop:
+    description: open the Xp Shop.
